--- a/Desktop/product_recommender/requirements.txt
+++ b/Desktop/product_recommender/requirements.txt
@@ -1,6 +1,6 @@
-flask
-flask-cors
-pandas
-numpy
-scikit-learn
-gunicorn
+flask==3.1.0
+flask-cors==6.0.1
+pandas==2.3.0
+numpy==2.3.1
+scikit-learn==1.7.0
+gunicorn==23.0.0
